--- a/html02/style.css
+++ b/html02/style.css
@@ -107,6 +107,14 @@ body{
     margin: 40px;
 }
 
+.nome {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+
+
 
 
 
